# For pip, install like this:
#   pip install . --group opencv-normal --group qt6-normal --group mpv-normal --group other-normal
# For uv, just do, as normal:
#   uv sync

[project]
name = "hydrus"
version = "v660"
description = "A personal booru-style media tagger"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.0.0",
    "cbor2>=5.6.5",
    "chardet>=3.0.4",
    "cryptography>=44.0.0",
    "dateparser==1.2.1",
    "html5lib>=1.0.1",
    "lxml>=4.5.0",
    "lz4>=3.0.0",
    "olefile>=0.47",
    "pillow>=10.0.1",
    "pillow-heif>=0.12.0",
    "pillow-jxl-plugin>=1.3.0",
    "psutil>=5.0.0",
    "pympler>=1.1",
    "pyopenssl>=19.1.0",
    "pysocks>=1.7.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=5.0.0",
    "send2trash>=1.5.0",
    "service-identity>=18.1.0",
    "show-in-file-manager>=1.1.5",
    "twisted[http2,tls]>=20.3.0",
    "requests==2.32.5",
    "pyobjc-core>=10.1 ; sys_platform == 'darwin'",
    "pyobjc-framework-cocoa>=10.1 ; sys_platform == 'darwin'",
    "pyobjc-framework-quartz>=10.1 ; sys_platform == 'darwin'",
    "pywin32 ; sys_platform == 'win32'",
]

# the three `mpv-new`, `opencv-new`, and `qt6-new` groups are old synonyms for what I now call -normal. the -new groups will be deleted on v673

[tool.uv]
default-groups = [ "mpv-normal", "opencv-normal", "other-normal", "qt6-normal" ]
conflicts = [
    [
        { group = "mpv-new" },
        { group = "mpv-normal" },
        { group = "mpv-test" },
    ],
    [
        { group = "opencv-new" },
        { group = "opencv-normal" },
        { group = "opencv-test" },
        { group = "opencv-old" },
    ],
    [
        { group = "other-future" },
        { group = "other-normal" },
    ],
    [
        { group = "qt6-new" },
        { group = "qt6-normal" },
        { group = "qt6-new-pyqt6" },
        { group = "qt6-older" },
        { group = "qt6-test" },
    ]
]

[dependency-groups]
mpv-new = [
    "mpv==1.0.8",
]
mpv-normal = [
    "mpv==1.0.8",
]
mpv-test = [
    "mpv==1.0.8",
]
opencv-new = [
    "opencv-python-headless==4.11.0.86",
    "numpy<=2.3.1",
]
opencv-normal = [
    "opencv-python-headless==4.11.0.86",
    "numpy<=2.3.1",
]
opencv-old = [
    "opencv-python-headless==4.8.1.78",
    "numpy<=2.3.1",
]
opencv-test = [
    "opencv-python-headless==4.13.0.90",
    "numpy==2.4.1 ; python_version >= '3.11'",
]
other-future = [
    "tldextract==5.3.1",
]
other-normal = [
]
qt6-new = [
    "pyside6==6.9.3",
    "qtpy==2.4.3",
]
qt6-normal = [
    "pyside6==6.9.3",
    "qtpy==2.4.3",
]
qt6-new-pyqt6 = [
    "pyqt6",
    "pyqt6-charts",
    "qtpy",
]
qt6-older = [
    "pyside6==6.3.1",
    "qtpy==2.3.1",
]
qt6-test = [
    "pyside6==6.10.1",
    "qtpy==2.4.3",
]
dev = [
    # Common dev tools
    "httmock>=1.4.0",
    "mkdocs-material==9.7.1",
    #"setuptools==78.1.1",
    #"PyInstaller==6.14.1",
    # Windows-specific build tools
    #"pefile ; sys_platform == 'win32'",
    # macOS-specific build tools
    #"pyoxidizer==0.24.0 ; sys_platform == 'darwin'",
    #"pyobjc-core>=10.1 ; sys_platform == 'darwin'",
    #"pyobjc-framework-Cocoa>=10.1 ; sys_platform == 'darwin'",
    #"pyobjc-framework-Quartz>=10.1 ; sys_platform == 'darwin'",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hydrus*"]
